@@ -1,3 +1,8 @@
+2004-07-14  Dan Winship  <danw@novell.com>
+
+	* lib/e2k-xml-utils.c (e2k_parse_html): Fix the #ifdef for old
+	libxmls to avoid both new calls, not just one of them.
+
 2004-07-09  Dan Winship  <danw@novell.com>
 
 	* calendar/e-cal-backend-exchange-calendar.c (set_freebusy_info):
